--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".RefDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RefrigeratorActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LikesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DogsRecipeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CatsRecipeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CatSearchResultActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CatsMainActivity"
+            android:exported="false" />
+        <activity
             android:name=".TypeActivity"
             android:exported="false" />
         <activity
