--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 
 dependencies {
 
+    implementation("androidx.fragment:fragment-ktx:1.3.6")
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -47,6 +48,7 @@ dependencies {
     testImplementation 'junit:junit:+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
